--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "seismic-explorer",
-  "version": "2.5.0",
+  "version": "2.5.1",
   "description": "",
   "repository": {
     "type": "git",
@@ -9,7 +9,8 @@
   "scripts": {
     "lint": "standard --fix js/**/*.js",
     "build": "webpack",
-    "build-production": "PRODUCTION=true webpack"
+    "build-production": "PRODUCTION=true webpack",
+    "start": "webpack-dev-server"
   },
   "standard": {
     "ignore": [
@@ -28,29 +29,29 @@
   },
   "homepage": "https://github.com/concord-consortium/seismic-explorer#readme",
   "devDependencies": {
-    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.6.4",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^7.1.5",
     "babel-plugin-transform-runtime": "^6.6.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.24.1",
     "brfs": "^1.4.3",
-    "copy-webpack-plugin": "^1.1.1",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.23.1",
-    "file-loader": "^0.8.5",
-    "imports-loader": "^0.6.5",
+    "file-loader": "^1.1.11",
+    "imports-loader": "^0.8.0",
     "json-loader": "^0.5.4",
-    "less": "^2.6.0",
-    "less-loader": "^2.2.2",
+    "less": "^3.8.1",
+    "less-loader": "^4.1.0",
     "raw-loader": "^0.5.1",
     "standard": "^10.0.2",
     "style-loader": "^0.13.0",
     "transform-loader": "^0.2.3",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "url-loader": "^1.0.1",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5"
   },
   "dependencies": {
     "babel-polyfill": "^6.6.1",
@@ -58,17 +59,17 @@
     "font-awesome": "^4.5.0",
     "iframe-phone": "^1.1.3",
     "immutable": "^3.7.6",
-    "jquery": "^2.2.2",
+    "jquery": "^3.3.1",
     "leaflet": "^1.3.1",
     "leaflet-plugins": "^3.0.1",
     "leaflet-rotatedmarker": "^0.2.0",
     "prop-types": "^15.5.10",
     "rainbowvis.js": "^1.0.1",
     "rc-slider": "^8.3.1",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
     "react-leaflet": "^1.9.1",
-    "react-modal": "^1.4.0",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
     "redux": "^3.7.2",
